--- a/CognoView/templates/accounts/pages-blank.html
+++ b/CognoView/templates/accounts/pages-blank.html
@@ -206,23 +206,24 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="{% static 'assets/img/profile-img.jpg'%}" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">Admin</span>
+            {% comment %} <img src="{% static 'assets/img/userlogin.png'%}" alt="Profile" class="rounded-circle"> {% endcomment %}
+            <i class="bi bi-person" style="width=:50px; height:50px "></i>
+            <span class="d-none d-md-block dropdown-toggle ps-2"></span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Admin</h6>
-              <span>Control Panel</span>
+              <h6></h6>
+              <span>Login to go!</span>
             </li>
             <li>
               <hr class="dropdown-divider">
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+              <a class="dropdown-item d-flex align-items-center" href="{% url 'login' %}">
                 <i class="bi bi-person"></i>
-                <span>My Profile</span>
+                <span>Login</span>
               </a>
             </li>
             <li>
@@ -230,9 +231,9 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+              <a class="dropdown-item d-flex align-items-center" href="{% url 'signup' %}">
                 <i class="bi bi-gear"></i>
-                <span>Account Settings</span>
+                <span>Signup</span>
               </a>
             </li>
             <li>
@@ -249,12 +250,12 @@
               <hr class="dropdown-divider">
             </li>
 
-            <li>
+            {% comment %} <li>
               <a class="dropdown-item d-flex align-items-center" href="{% url 'logout' %}">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Sign Out</span>
               </a>
-            </li>
+            </li> {% endcomment %}
 
           </ul><!-- End Profile Dropdown Items -->
         </li><!-- End Profile Nav -->
@@ -477,7 +478,7 @@
       </li><!-- End Register Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-login.html">
+        <a class="nav-link collapsed" href="{% url 'login' %}">
           <i class="bi bi-box-arrow-in-right"></i>
           <span>Login</span>
         </a>
