--- a/CognoView/templates/qpanalyze/abf.html
+++ b/CognoView/templates/qpanalyze/abf.html
@@ -19,123 +19,172 @@
 <section class="section">
     <div class="row">
       <div class="col-lg-9">
+        <form>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">General Form Elements</h5>
 
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">General Form Elements</h5>
-
-            <!-- General Form Elements -->
-            <form>
-              <div class="row mb-3">
-                <label for="inputText" class="col-sm-2 col-form-label">Department</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control">
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="inputText" class="col-sm-2 col-form-label">Subject</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control">
-                </div>
-              </div>
-              {% comment %} <div class="row mb-3">
-                <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control">
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
-                  <input type="password" class="form-control">
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="inputNumber" class="col-sm-2 col-form-label">Number</label>
-                <div class="col-sm-10">
-                  <input type="number" class="form-control">
-                </div>
-              </div> {% endcomment %}
-              <div class="row mb-3">
-                <label for="inputNumber" class="col-sm-2 col-form-label">File Upload</label>
-                <div class="col-sm-10">
-                  <input class="form-control" type="file" id="formFile" multiple>
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="inputDate" class="col-sm-2 col-form-label">Date</label>
-                <div class="col-sm-10">
-                  <input type="date" class="form-control">
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="inputTime" class="col-sm-2 col-form-label">Time</label>
-                <div class="col-sm-10">
-                  <input type="time" class="form-control">
-                </div>
-              </div>
-
+              <!-- General Form Elements -->
               
-              
-              
-              {% comment %} <div class="row mb-3">
-                <legend class="col-form-label col-sm-2 pt-0">Checkboxes</legend>
-                <div class="col-sm-10">
-
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck1">
-                    <label class="form-check-label" for="gridCheck1">
-                      Example checkbox
-                    </label>
+                <div class="row mb-3">
+                  <label for="inputText" class="col-sm-2 col-form-label">Department</label>
+                  <div class="col-sm-10">
+                    <!-- <input type="text" class="form-control"> -->
+                    <select class="form-select" aria-label="Departments" id="department" required>
+                      <option selected>-- Select Department -- </option>
+                      {% for department in departments %}
+                        <option value="{{department.department_code}}">{{department}}</option>
+                      {% endfor%}
+                    </select>
                   </div>
-
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck2" checked>
-                    <label class="form-check-label" for="gridCheck2">
-                      Example checkbox 2
-                    </label>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputText" class="col-sm-2 col-form-label">Semester</label>
+                  <div class="col-sm-10">
+                    <select class="form-select" aria-label="sem" id="sem" required>
+                      <option selected>-- Select Semester -- </option>
+                    </select>
                   </div>
-
                 </div>
-              </div> {% endcomment %}
-
-              {% comment %} <div class="row mb-3">
-                <label class="col-sm-2 col-form-label">Disabled</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" value="Read only / Disabled" disabled>
+                <div class="row mb-3">
+                  <label class="col-sm-2 col-form-label">Question paper type</label>
+                  <div class="col-sm-10">
+                    <select class="form-select" aria-label="Default select example" required>
+                      <option selected>Select..</option>
+                      <option value="1">CA</option>
+                      <option value="2">Semester</option>
+                      <option value="3">Three</option>
+                    </select>
+                  </div>
                 </div>
-              </div> {% endcomment %}
-
-              <div class="row mb-3">
-                <label class="col-sm-2 col-form-label">Question paper type</label>
-                <div class="col-sm-10">
-                  <select class="form-select" aria-label="Default select example">
-                    <option selected>Select..</option>
-                    <option value="1">CA</option>
-                    <option value="2">Semester</option>
-                    <option value="3">Three</option>
-                  </select>
+                <div class="row mb-3">
+                  <label class="col-sm-2 col-form-label">Date</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" value="dd/mm/yyyy" disabled>
+                  </div>
                 </div>
-              </div>
-
-              
-
-              <div class="row mb-3">
-                <label class="col-sm-2 col-form-label">Submit Button</label>
-                <div class="col-sm-10">
-                  <button type="submit" class="btn btn-primary">Submit Form</button>
+                <div class="row mb-3">
+                  <label for="inputNumber" class="col-sm-2 col-form-label">Number of paper</label>
+                  <div class="col-sm-10">
+                    <input type="number" class="form-control" name="qPaper" required>
+                  </div>
                 </div>
-              </div>
+                <div class="card">
+                   <div class="card-body">
+                      <h6 class="card-title">Details of each question paper</h6>
+                      <div class="row mb-3">
+                        <label for="inputText" class="col-sm-2 col-form-label">Subject Code</label>
+                        <div class="col-sm-10">
+                          <select class="form-select" aria-label="Subject Code" id="subject" required>
+                            <option selected>-- Select Subject -- </option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <label for="inputNumber" class="col-sm-2 col-form-label">File Upload</label>
+                        <div class="col-sm-10">
+                          <input class="form-control" type="file" id="formFile" required>
+                        </div>
+                      </div>
+                   </div>
+                </div>  
+                {% comment %} <div class="row mb-3">
+                  <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+                  <div class="col-sm-10">
+                    <input type="email" class="form-control">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                  <div class="col-sm-10">
+                    <input type="password" class="form-control">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputNumber" class="col-sm-2 col-form-label">Number</label>
+                  <div class="col-sm-10">
+                    <input type="number" class="form-control">
+                  </div>
+                </div> {% endcomment %}
+                
+                
+                
 
-            </form><!-- End General Form Elements -->
+                
+                
+                
+                {% comment %} <div class="row mb-3">
+                  <legend class="col-form-label col-sm-2 pt-0">Checkboxes</legend>
+                  <div class="col-sm-10">
 
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" id="gridCheck1">
+                      <label class="form-check-label" for="gridCheck1">
+                        Example checkbox
+                      </label>
+                    </div>
+
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" id="gridCheck2" checked>
+                      <label class="form-check-label" for="gridCheck2">
+                        Example checkbox 2
+                      </label>
+                    </div>
+
+                  </div>
+                </div> {% endcomment %}
+
+                {% comment %} <div class="row mb-3">
+                  <label class="col-sm-2 col-form-label">Disabled</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" value="Read only / Disabled" disabled>
+                  </div>
+                </div> {% endcomment %}
+
+                <div class="row mb-3">
+                  
+                  <div class="col-sm-10">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </div>
+                </div>
+
+            <!-- End General Form Elements -->
+
+            </div>
           </div>
-        </div>
-
+        </form>
       </div>
 
       
+
     </div>
 </section>
+
+<script>
+  $(document).ready(function () {
+    $('#department').change(function () {
+      var department_code = $(this).val();
+
+      if(department_code){
+        $.ajax({
+          url: window.location.href,  // Call the same URL
+          data: {
+              'department_code': department_code
+          },
+          dataType: 'json',
+          success: function(data){
+            $.each(data, function(index, subject) {
+              console.log(subject);
+              $('#subject').append('<option value="'+subject.subject_code+'">'+subject.subject_code + ' - ' + subject.subject_name +'</option>');
+            });
+          },
+          error: function(error){
+            console.error('Ajax Error: ', status, error);
+          }
+        });
+      }
+    });
+  });
+</script>
 
 {% endblock %} 
