--- a/CognoView/templates/qpanalyze/base.html
+++ b/CognoView/templates/qpanalyze/base.html
@@ -29,7 +29,8 @@
 
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
-
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
  
 </head>
 
