--- a/CognoView/templates/qpanalyze/abf.html
+++ b/CognoView/templates/qpanalyze/abf.html
@@ -19,10 +19,12 @@
 <section class="section">
     <div class="row">
       <div class="col-lg-9">
-        <form>
+        <form method="POST" action="{% url 'questions' %}" enctype="multipart/form-data">
+          {% csrf_token %}
+
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">General Form Elements</h5>
+              <h5 class="card-title">Question Paper Information</h5>
 
               <!-- General Form Elements -->
               
@@ -30,7 +32,7 @@
                   <label for="inputText" class="col-sm-2 col-form-label">Department</label>
                   <div class="col-sm-10">
                     <!-- <input type="text" class="form-control"> -->
-                    <select class="form-select" aria-label="Departments" id="department" required>
+                    <select class="form-select" aria-label="Departments" id="department" name="department" required>
                       <option selected>-- Select Department -- </option>
                       {% for department in departments %}
                         <option value="{{department.department_code}}">{{department}}</option>
@@ -41,110 +43,40 @@
                 <div class="row mb-3">
                   <label for="inputText" class="col-sm-2 col-form-label">Semester</label>
                   <div class="col-sm-10">
-                    <select class="form-select" aria-label="sem" id="sem" required>
+                    <select class="form-select" aria-label="sem" id="semester" name="semester" required>
                       <option selected>-- Select Semester -- </option>
+                      {% for value, label in semesters %}
+                      <option value="{{value}}">{{label}}</option>
+                      {% endfor %}
                     </select>
                   </div>
                 </div>
                 <div class="row mb-3">
-                  <label class="col-sm-2 col-form-label">Question paper type</label>
+                  <label class="col-sm-2 col-form-label">Exam Type</label>
                   <div class="col-sm-10">
-                    <select class="form-select" aria-label="Default select example" required>
-                      <option selected>Select..</option>
-                      <option value="1">CA</option>
-                      <option value="2">Semester</option>
-                      <option value="3">Three</option>
+                    <select class="form-select" aria-label="Exam Type" id="exam_type" name="exam_type" required>
+                      <option selected>-- Select Exam Type --</option>
+                      {% for value, label in exam_type %}
+                      <option value="{{value}}">{{label}}</option>
+                      {% endfor %}
                     </select>
                   </div>
                 </div>
                 <div class="row mb-3">
-                  <label class="col-sm-2 col-form-label">Date</label>
+                  <label for="inputNumber" class="col-sm-2 col-form-label">Number of papers</label>
                   <div class="col-sm-10">
-                    <input type="text" class="form-control" value="dd/mm/yyyy" disabled>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="inputNumber" class="col-sm-2 col-form-label">Number of paper</label>
-                  <div class="col-sm-10">
-                    <input type="number" class="form-control" name="qPaper" required>
+                    <input type="number" class="form-control" id="subject_count" name="subject_count" value=0 readonly>
                   </div>
                 </div>
                 <div class="card">
-                   <div class="card-body">
-                      <h6 class="card-title">Details of each question paper</h6>
-                      <div class="row mb-3">
-                        <label for="inputText" class="col-sm-2 col-form-label">Subject Code</label>
-                        <div class="col-sm-10">
-                          <select class="form-select" aria-label="Subject Code" id="subject" required>
-                            <option selected>-- Select Subject -- </option>
-                          </select>
-                        </div>
-                      </div>
-                      <div class="row mb-3">
-                        <label for="inputNumber" class="col-sm-2 col-form-label">File Upload</label>
-                        <div class="col-sm-10">
-                          <input class="form-control" type="file" id="formFile" required>
-                        </div>
-                      </div>
+                   <div class="card-body" id="subject_container">
+                    <h6 class="card-title">Details of each question paper</h6>
                    </div>
-                </div>  
-                {% comment %} <div class="row mb-3">
-                  <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
-                  <div class="col-sm-10">
-                    <input type="email" class="form-control">
-                  </div>
                 </div>
-                <div class="row mb-3">
-                  <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                  <div class="col-sm-10">
-                    <input type="password" class="form-control">
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="inputNumber" class="col-sm-2 col-form-label">Number</label>
-                  <div class="col-sm-10">
-                    <input type="number" class="form-control">
-                  </div>
-                </div> {% endcomment %}
-                
-                
-                
-
-                
-                
-                
-                {% comment %} <div class="row mb-3">
-                  <legend class="col-form-label col-sm-2 pt-0">Checkboxes</legend>
-                  <div class="col-sm-10">
-
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" id="gridCheck1">
-                      <label class="form-check-label" for="gridCheck1">
-                        Example checkbox
-                      </label>
-                    </div>
-
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" id="gridCheck2" checked>
-                      <label class="form-check-label" for="gridCheck2">
-                        Example checkbox 2
-                      </label>
-                    </div>
-
-                  </div>
-                </div> {% endcomment %}
-
-                {% comment %} <div class="row mb-3">
-                  <label class="col-sm-2 col-form-label">Disabled</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" value="Read only / Disabled" disabled>
-                  </div>
-                </div> {% endcomment %}
 
                 <div class="row mb-3">
-                  
-                  <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                  <div class="col-10 text-center">
+                    <button type="submit" class="btn btn-primary w-50">Submit</button>
                   </div>
                 </div>
 
@@ -154,22 +86,22 @@
           </div>
         </form>
       </div>
-
-      
-
     </div>
 </section>
 
 <script>
   $(document).ready(function () {
-    $('#department').change(function () {
-      var department_code = $(this).val();
+    function fetchSubjects() {
+      var department_code = $('#department').val();
+      var semester = $('#semester').val();
+      var subject_container = $('#subject_container');
 
-      if(department_code){
+      if(department_code && semester){
         $.ajax({
           url: window.location.href,  // Call the same URL
           data: {
-              'department_code': department_code
+              'department_code': department_code,
+              'semester': semester
           },
           dataType: 'json',
           success: function(data){
@@ -177,13 +109,65 @@
               console.log(subject);
               $('#subject').append('<option value="'+subject.subject_code+'">'+subject.subject_code + ' - ' + subject.subject_name +'</option>');
             });
+            
+            $('#subject_count').val(data.length);
+            if (data.length > 0){
+              $.each(data, function(index, subject) {
+                var dropdown = `
+                <div class='row mb-3'>
+                  <div class='col-sm-1'>
+                    <label for='subject_${index+1}' class='form-label'>#${index+1}</label>
+                  </div>
+                  <div class='col-sm-5'>
+                    <select class="form-select" aria-label="Subject Code" id="subject_${index+1}" name="subject_${index+1}" required>
+                      <option selected>-- Select Subject -- </option>
+                      <option value="${subject.subject_code}">${subject.subject_code} - ${subject.subject_name}</option>
+                    </select>
+                  </div>
+                  <div class="col-sm-6">
+                    <input class="form-control" type="file" id="file_${index+1}" name="file_${index+1}" accept=".pdf" required>
+                  </div>
+                </div>`;
+                subject_container.append(dropdown);
+              });
+            }
           },
           error: function(error){
             console.error('Ajax Error: ', status, error);
           }
         });
       }
+    }
+
+    function populate_details(subject_count){
+      var subject_container = $('#subject_container');
+
+      console.log(subject_count)
+      
+      if(subject_count > 0){
+        for (var i = 1; i <= subjectCount; i++) {
+          var dropdown = `<div class='row mb-3'>
+            <div class='col-sm-1'>
+              <label for='subject_${i}' class='form-label'>#${i}</label>
+            </div>
+            <div class='col-sm-5'>
+              <select class="form-select" aria-label="Subject Code" id="subject_${i}" required>
+                <option selected>-- Select Subject -- </option>
+              </select>
+            </div>
+            <div class="col-sm-6">
+              <input class="form-control" type="file" id="formFile" required>
+            </div>
+          </div>`;
+          subject_container.append();
+        }
+      }
+    }
+
+    $('#department, #semester').change(function() {
+      fetchSubjects(); 
     });
+
   });
 </script>
 
