added report download support

--- a/CognoView/templates/qpanalyze/abt.html
+++ b/CognoView/templates/qpanalyze/abt.html
@@ -16,154 +16,105 @@
 
 <section class="section">
     <div class="row">
-      <div class="col-lg-6">
-        <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Questions</h5>
-  
-              <!-- Floating Labels Form -->
-              <form class="row g-3">
-                <div class="col-md-12">
-                  <div class="form-floating">
-                    <input type="text" class="form-control" id="floatingName" placeholder="Your Name">
-                    <label for="floatingName">Enter Title</label>
+      <div class="col-lg-12">
+        <form method="POST" action="{% url 'abt' %}">
+          {% csrf_token %}
+          <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Questions</h5>
+    
+                <!-- Floating Labels Form -->
+                <form class="row g-3">
+                  <div class="col-md-12 mb-3">
+                    <h6><label for="department">Department</label></h6>
+                    <select class="form-select" aria-label="Departments" id="department" name="department" required>
+                      <option selected>-- Select Department -- </option>
+                      {% for department in departments %}
+                        <option value="{{department.department_code}}">{{department}}</option>
+                      {% endfor%}
+                    </select>
                   </div>
-                </div>
-                
-                
-                <div class="col-12">
-                  <div class="form-floating">
-                    <textarea class="form-control" placeholder="Address" id="floatingTextarea" style="height: 100px;"></textarea>
-                    <label for="floatingTextarea">Type your Questions here!</label>
+                  
+                  <div class="col-md-12 mb-3">
+                    <h6><label for="semester">Semester</label></h6>  
+                    <select class="form-select" aria-label="sem" id="semester" name="semester" required>
+                      <option selected>-- Select Semester -- </option>
+                      {% for value, label in semesters %}
+                      <option value="{{value}}">{{label}}</option>
+                      {% endfor %}
+                    </select>
                   </div>
-                </div>
+                  
+                  <div class="col-md-12 mb-3">
+                    <h6><label for="exam_type">Exam Type</label></h6>  
+                    <select class="form-select" aria-label="Exam Type" id="exam_type" name="exam_type" required>
+                      <option selected>-- Select Exam Type --</option>
+                      {% for value, label in exam_type %}
+                      <option value="{{value}}">{{label}}</option>
+                      {% endfor %}
+                    </select>
+                  </div>
+                  
+                  <div class="col-md-12 mb-3">
+                    <h6><label for="subject">Subject</label></h6>  
+                    <select class="form-select" aria-label="Subject" id="subject" name="subject" required>
+                      <option selected>-- Select Subject -- </option>
+                      {% for value, label in subjects %}
+                      <option value="{{value}}">{{label}}</option>
+                      {% endfor %}
+                    </select>
+                  </div>
+
+                  <div class="col-12 mb-3">
+                    <h6><label for="questions">Questions</label></h6>  
+                    <textarea class="form-control" id="question" name="question" style="height: 100px;"></textarea>
+                  </div>
                 
+                  <div class="text-center">
+                    <button type="submit" class="btn btn-primary w-50">Generate Report</button>
+                  </div>
+                </form><!-- End floating Labels Form -->
                 
-               
-                <div class="text-center">
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                  <button type="reset" class="btn btn-secondary">Reset</button>
-                </div>
-              </form><!-- End floating Labels Form -->
-              
-  
-            </div>
-        </div>
-        
-
-      </div>
-      <div class="col-lg-6">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Bar CHart</h5>
-
-            <!-- Bar Chart -->
-            <canvas id="barChart" style="max-height: 400px;"></canvas>
-            <script>
-              document.addEventListener("DOMContentLoaded", () => {
-                new Chart(document.querySelector('#barChart'), {
-                  type: 'bar',
-                  data: {
-                    labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
-                    datasets: [{
-                      label: 'Bar Chart',
-                      data: [65, 59, 80, 81, 56, 55, 40],
-                      backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(255, 159, 64, 0.2)',
-                        'rgba(255, 205, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(201, 203, 207, 0.2)'
-                      ],
-                      borderColor: [
-                        'rgb(255, 99, 132)',
-                        'rgb(255, 159, 64)',
-                        'rgb(255, 205, 86)',
-                        'rgb(75, 192, 192)',
-                        'rgb(54, 162, 235)',
-                        'rgb(153, 102, 255)',
-                        'rgb(201, 203, 207)'
-                      ],
-                      borderWidth: 1
-                    }]
-                  },
-                  options: {
-                    scales: {
-                      y: {
-                        beginAtZero: true
-                      }
-                    }
-                  }
-                });
-              });
-            </script>
-            <!-- End Bar CHart -->
-
+              </div>
           </div>
-        </div>
+        </form>
+
       </div>
-        
-    </div>
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="card">
-                <div class="card-body">
-                <h5 class="card-title">Results</h5>
-
-                <!-- List group with custom content -->
-                <ol class="list-group list-group-numbered">
-                    <li class="list-group-item d-flex justify-content-between align-items-start">
-                        <div class="ms-2 me-auto">
-                            <div class="fw-bold">Remembering</div>
-                            Cras justo odio
-                        </div>
-                        <span class="badge bg-primary rounded-pill">14</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-start">
-                        <div class="ms-2 me-auto">
-                            <div class="fw-bold">Understand</div>
-                            Cras justo odio
-                        </div>
-                        <span class="badge bg-primary rounded-pill">14</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-start">
-                        <div class="ms-2 me-auto">
-                            <div class="fw-bold">Subheading</div>
-                            Cras justo odio
-                        </div>
-                        <span class="badge bg-primary rounded-pill">14</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-start">
-                        <div class="ms-2 me-auto">
-                            <div class="fw-bold">Apply</div>
-                            Cras justo odio
-                        </div>
-                        <span class="badge bg-primary rounded-pill">14</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-start">
-                        <div class="ms-2 me-auto">
-                            <div class="fw-bold">Analyze</div>
-                            Cras justo odio
-                        </div>
-                        <span class="badge bg-primary rounded-pill">14</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-start">
-                        <div class="ms-2 me-auto">
-                            <div class="fw-bold">Analyze</div>
-                            Cras justo odio
-                        </div>
-                        <span class="badge bg-primary rounded-pill">14</span>
-                    </li>
-                </ol><!-- End with custom content -->
-
-                </div>
-            </div>
-        </div>
+      
     </div>
 </section>
 
+<script>
+  $(document).ready(function() {
+    function fetchSubjects() {
+      var department_code = $('#department').val();
+      var semester = $('#semester').val();
 
+      if(department_code && semester){
+        $.ajax({
+          url: window.location.href,  // Call the same URL
+          data: {
+              'department_code': department_code,
+              'semester': semester
+          },
+          dataType: 'json',
+          success: function(data){
+            $.each(data, function(index, subject) {
+              console.log(subject);
+              $('#subject').append('<option value="'+subject.subject_code+'">'+subject.subject_code + ' - ' + subject.subject_name +'</option>');
+            });
+          },
+          error: function(error){
+            console.error('Ajax Error: ', status, error);
+          }
+        });
+      }
+    }
+
+    $('#department, #semester').change(function() {
+      fetchSubjects(); 
+    });
+  });
+</script>
 
 {% endblock %} 
