--- a/CognoView/templates/qpanalyze/report_detail.html
+++ b/CognoView/templates/qpanalyze/report_detail.html
@@ -72,11 +72,11 @@
                     </div>
                 </div>
 
-                <!--<div class="row mb-3">
-                  <div class="col-10 text-center">
-                    <button type="button" class="btn btn-primary w-50" id="generate-report-btn">Generate Report</button>
-                  </div>
-                </div>-->
+                <div class="row mb-3">
+                    <div class="col-10 text-center">
+                      <a href="?download_pdf=true" class="btn btn-primary w-50">Download Report</a>
+                    </div>
+                </div>
             </div>
           </div>
         </div>
